--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form action="/login" method="post">
-        <label for="username">Username</label>
-        <input id="username" name="username" type="text">
-        <label for="password">Password</label>
-        <input id="password" name="password" type="password">
-        <button>Submit</button>
-    </form>
-</body>
-</html>
+<h1>Login</h1>
+<form action="/login" method="post">
+  <label for="username">Username</label>
+  <input id="username" name="username" type="text" />
+  <label for="password">Password</label>
+  <input id="password" name="password" type="password" />
+  <button>Submit</button>
+</form>
+
