--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="test.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>File Uploader</title>
   </head>
   <body>
+    <%- include('../partials/header') %>
     <%- body %>
+    <%- include('../partials/footer') %>
   </body>
 </html>
