--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -7,8 +7,6 @@
     <title>File Uploader</title>
   </head>
   <body>
-    <%- include('../partials/header') %>
-    <%- body %>
-    <%- include('../partials/footer') %>
+    <%- include('../partials/header') %> <%- body %> <%- include('../partials/footer') %>
   </body>
 </html>
