add: home route & controller

--- a/views/layouts/blank.ejs
+++ b/views/layouts/blank.ejs
@@ -7,6 +7,6 @@
     <title>File Uploader</title>
   </head>
   <body>
-    <%- include('../partials/header', { user }) %> <%- body %> <%- include('../partials/footer') %>
+    <%- body %> <%- include('../partials/footer') %>
   </body>
 </html>
