--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,4 +1,4 @@
-<form action="/file-upload" method="post" enctype="multipart/form-data">
+<form action="/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="uploaded_file">
     <button type="submit">upload</button>
 </form>
